# sentinel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  devenv.nix  rust-toolchain.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  improvement.md
.github/workflows/: ci.yml
src/: commands.rs  lib.rs  main.rs
src/commands/: avatar.rs  ping.rs
